@@ -3,7 +3,7 @@
 <title>gluon example</title>
 </head>
 <frameset cols="20%,80%">
-  <%= frame_path '/example/menu', :name => 'menu' %>
-  <%= frame_path '/example/ex_panel?example=value', :name => 'main' %>
+  <%= frame '/example/menu', :name => 'menu' %>
+  <%= frame '/example/ex_panel?example=value', :name => 'main' %>
 </frameset>
 </html>
