@@ -5,13 +5,13 @@
 <body>
 <h2>examples</h2>
 
-<p><%= link_path '/', :target => '_top', :text => 'return top.' %></p>
+<p><%= link '/', :target => '_top', :text => 'return top.' %></p>
 <ul>
-  <li><%= link_path '/example/ex_panel?example=value',   :target => 'main', :text => 'value' %></li>
-  <li><%= link_path '/example/ex_panel?example=cond',    :target => 'main', :text => 'cond' %></li>
-  <li><%= link_path '/example/ex_panel?example=foreach', :target => 'main', :text => 'foreach' %></li>
-  <li><%= link_path '/example/ex_panel?example=link',    :target => 'main', :text => 'link' %></li>
-  <li><%= link_path '/example/ex_panel?example=import',  :target => 'main', :text => 'import' %></li>
+  <li><%= link '/example/ex_panel?example=value',   :target => 'main', :text => 'value' %></li>
+  <li><%= link '/example/ex_panel?example=cond',    :target => 'main', :text => 'cond' %></li>
+  <li><%= link '/example/ex_panel?example=foreach', :target => 'main', :text => 'foreach' %></li>
+  <li><%= link '/example/ex_panel?example=link',    :target => 'main', :text => 'link' %></li>
+  <li><%= link '/example/ex_panel?example=import',  :target => 'main', :text => 'import' %></li>
 </ul>
 
 </body>
