@@ -10,7 +10,7 @@
 application.</p>
 
 <h2>Examples</h2>
-<p>see <%= link_path '/example', :text => 'example' %></p>
+<p>see <%= link '/example', :text => 'example' %></p>
 
 <hr />
 <address>
