@@ -1,3 +1,8 @@
+2007-06-14  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/po.rb: (Gluon::PresentationObject class) rename
+	methods. `link_path' -> `link', `frame_path' -> `frame'
+
 2007-06-13  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/builder.rb: some request parameters, `gluon.path_info'
